<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_domain_white_24dp"
        android:title="@string/category"
        app:showAsAction="always" />

    <item
        android:id="@+id/date_range"
        android:icon="@drawable/ic_date_range_white_24dp"
        android:title="@string/date_range"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/list"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/list"
        app:showAsAction="always" />

</menu>
